--- a/05_Regional_Climate_Trends/Guides/1_Obtaining_State_Weather_Data.Rnw
+++ b/05_Regional_Climate_Trends/Guides/1_Obtaining_State_Weather_Data.Rnw
@@ -87,7 +87,7 @@ I suggest you do the following to prepare:
 
 \section{R Functions for Getting Weather Station Data}
 
-\subsection{Creating a Record of Your Commands w/R Markdown}
+\subsection{Creating a Record of Your Commands w/R Markdown}\label{subsec:RMarkdown}
 
 To record your history of R code, I suggest use an Rmarkdown file to keep your code handy. 
 
@@ -101,7 +101,7 @@ Normally, we use R Studio to creata a new file and select R Markdown. Then we de
 \end{figure}
 
 
-However, for this prooject, I suggest you use my template and name the file ``ST\_Climate\_Trends--Surname.Rmd'', where ST is the state you selected and Surname is your last name. 
+However, for this project, I suggest you use my template and name the file ``ST\_Climate\_Trends--Surname.Rmd'', where ST is the state you selected and Surname is your last name. 
 
 Knit the file to create a PDF. Look at the PDF to see how various parts of the Rmd file were knitted. Notice that there are generally two sections: text and R chunks. As you write th R code, you will can record your code in the R chunks AND develop the output into a document for future reference.
 
@@ -236,9 +236,9 @@ Note: the filename is define as the path to find the file and the filename -- th
 
 \subsection{Selecting Weather Records by State}
 
-\subsubsection{Map US Weather Stations}
+\subsubsection{Map US Weather Stations---Using Base R}
 
-Here's a map of the weather stations in the dataset. Pretty lame map!  We'll make a better one later.\footnote{Evelyn/Brody: This is a good change to see how to use R for map making! First we need to transform that data.}
+Here's a map of the weather stations in the dataset. Pretty lame map!  We'll make a better one later.\footnote{This is a good change to see how to use R for map making! First we need to transform that data, but by using ggplot2, we can generate much better maps.}
 
 <<>>=
 stations.active.oldest = 
@@ -260,6 +260,28 @@ Here are the questions we will address:
   \item Can we determine the reliability of these stations?
   \item Finally, is there a temperature trend?
 \end{itemize}
+
+\subsubsection{Mapping Stations with ggplot2}
+
+Here is a better map of the weather stations using ggplot2.
+
+<<>>=
+library(ggplot2)
+library(maps)
+library(ggthemes)
+us <- map_data("state")
+ggplot() + 
+  geom_polygon(data = us, aes(x=long, y = lat, group = group), 
+               fill = "gray90", color = "white") +
+  geom_point(data = stations.active.oldest, 
+             aes(x = LONGITUDE, y = LATITUDE), 
+             color = "blue", size = 0.5, alpha = 0.5) +
+  coord_fixed(1.3) +
+  theme_minimal() +
+  labs(title = "US Weather Stations",
+       x = "Longitude",
+       y = "Latitude")
+@
 
 \subsection{Subset Station Inventory by State}
 
